# raw_image_pipeline

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh  todo.txt
images/: test_image.raw
include/: config_file.h  cuda_optimization.h  image_processing.h
src/: CMakeLists.txt  cuda_optimization.cu  image_processing.cpp  main.cpp
